--- a/index.html
+++ b/index.html
@@ -3,9 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Blog Feed</title>
+  <link rel="stylesheet" href="./css/index.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Jaldi:wght@400;700&family=Jura:wght@300..700&family=Lemon&display=swap" rel="stylesheet">
 </head>
 <body>
-  Test
+  <header>
+    <div class="logo">
+      <a href="index.html">Hungry Eyes</a>
+    </div>
+    <div class="header-nav">
+    <nav>
+      <ul>
+        <li> <a href="#">Blog</a></li>
+        <li> <a href="#">Sign in</a></li>
+      </ul>
+    </nav>
+    </div>
+  </header>
+  <main></main>
+  <footer></footer>
 </body>
 </html>
