button lare + small screen

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </nav>
     </div>
   </header>
-  <main></main>
+  <main><button>Hei knapp</button></main>
   <footer></footer>
 </body>
 </html>
