hero banner mobile + desktop

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Blog Feed</title>
+  <link rel="stylesheet" href="./css/assets.css">
   <link rel="stylesheet" href="./css/index.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,7 +24,12 @@
     </nav>
     </div>
   </header>
-  <main><button>Hei knapp</button></main>
+  <main>
+    <div class="hero-element">
+      <h1><span>Explore the world<br>one bite at a time..</span></h1>
+      <button>See more <a href="#"></a></button>
+    </div>
+  </main>
   <footer></footer>
 </body>
 </html>
