--- a/html/blogpost.html
+++ b/html/blogpost.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Blog Feed</title>
-  <link rel="stylesheet" href="./css/assets.css">
-  <link rel="stylesheet" href="./css/index.css">
+  <link rel="stylesheet" href="../css/assets.css">
+  <link rel="stylesheet" href="../css/index.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jaldi:wght@400;700&family=Jura:wght@300..700&family=Lemon&display=swap" rel="stylesheet">
@@ -13,7 +13,7 @@
 <body>
   <header>
     <div class="logo">
-      <a href="index.html">Hungry Eyes</a>
+      <a href="/index.html">Hungry Eyes</a>
     </div>
     <div class="header-nav">
     <nav>
@@ -25,10 +25,6 @@
     </div>
   </header>
   <main>
-    <div class="hero-element">
-      <h1><span>Explore the world<br>one bite at a time..</span></h1>
-      <button>See more <a href="#"></a></button>
-    </div>
   </main>
   <footer></footer>
 </body>
