footer index and css

--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
       <button>See more <a href="#"></a></button>
     </div>
   </main>
-  <footer></footer>
+  <footer>
+      <img src="/img/facebook-app-symbol-2.png" alt="facebook symbol">
+      <img src="img/instagram-3.png" alt="instagram symbol">
+      <img src="img/tik-tok-2.png" alt="tiktok symbol">
+    <div class="footer-logo">
+      Hungry Eyes
+    </div>
+  </footer>
 </body>
 </html>
