html blogpost, login + stylesheets

--- a/index.html
+++ b/index.html
@@ -19,21 +19,28 @@
     <nav>
       <ul>
         <li> <a href="/html/blogpost.html">Blog</a></li>
-        <li> <a href="#">Sign in</a></li>
+        <li> <a href="/html/login.html">Sign in</a></li>
       </ul>
     </nav>
     </div>
   </header>
   <main>
-    <div class="hero-element">
+    <section class="hero-element">
       <h1><span>Explore the world<br>one bite at a time..</span></h1>
       <button>See more <a href="#"></a></button>
-    </div>
+    </section>
+    <section class="carousel">
+      <h2>Most recent</h2>
+      Carousel
+    </section>
+    <section class="blog-grid">
+      Blog grid
+    </section>
   </main>
   <footer>
       <img src="/img/facebook-app-symbol-2.png" alt="facebook symbol">
-      <img src="img/instagram-3.png" alt="instagram symbol">
-      <img src="img/tik-tok-2.png" alt="tiktok symbol">
+      <img src="/img/instagram-3.png" alt="instagram symbol">
+      <img src="/img/tik-tok-2.png" alt="tiktok symbol">
     <div class="footer-logo">
       Hungry Eyes
     </div>
