--- a/html/blogpost.html
+++ b/html/blogpost.html
@@ -25,6 +25,10 @@
     </div>
   </header>
   <main>
+    <section class="blog-feed">
+      <h2>Blog feed</h2>
+      blog feed element
+    </section>
   </main>
   <footer>
     <img src="/img/facebook-app-symbol-2.png" alt="facebook symbol">
