edit post, login, register html

--- a/html/login.html
+++ b/html/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Blog Feed</title>
+  <title>Login</title>
   <link rel="stylesheet" href="../css/assets.css">
   <link rel="stylesheet" href="../css/login.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,6 +25,14 @@
     </div>
   </header>
   <main>
+    <section class="login">
+      <div class="login-img"></div>
+      <div class="login-form">
+        <h1>Welcome back!</h1>
+        <h2>New user? Register here</h2>
+        form here
+      </div>
+    </section>
   </main>
   <footer>
     <img src="/img/facebook-app-symbol-2.png" alt="facebook symbol">
