--- a/html/login.html
+++ b/html/login.html
@@ -29,8 +29,12 @@
       <div class="login-img"></div>
       <div class="login-form">
         <h1>Welcome back!</h1>
-        <h2>New user? Register here</h2>
-        form here
+         <a href="/html/register.html"><h2>New user? Register <span>here</span></h2></a>
+          <form action="#" method="#">
+            <input type="email" id="email" name="email" placeholder="Email" required>
+            <input type="password" id="password" name="password" placeholder="Password" required>
+            <button type="submit"></button>
+         </form>
       </div>
     </section>
   </main>
