--- a/html/register.html
+++ b/html/register.html
@@ -29,7 +29,13 @@
       <div class="login-img"></div>
       <div class="login-form">
         <h1>Welcome!</h1>
-        form here
+        <form action="#" method="#">
+          <input type="name" id="name" name="name" placeholder="Full name" required>
+          <input type="email" id="email" name="email" placeholder="Email" required>
+          <input type="password" id="password" name="password" placeholder="Password" required>
+          <input type="password" id="password" name="password" placeholder="Password" required>
+          <button type="submit">Register</button>
+       </form>
       </div>
     </section>
   </main>
