--- a/html/login.html
+++ b/html/login.html
@@ -33,7 +33,7 @@
           <form action="#" method="#">
             <input type="email" id="email" name="email" placeholder="Email" required>
             <input type="password" id="password" name="password" placeholder="Password" required>
-            <button type="submit"></button>
+            <button type="submit">Submit</button>
          </form>
       </div>
     </section>
