--- a/html/register.html
+++ b/html/register.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jaldi:wght@400;700&family=Jura:wght@300..700&family=Lemon&display=swap" rel="stylesheet">
+  <script type="module" src="/scripts/utilitys/register.mjs"></script>
 </head>
 <body>
   <header>
@@ -33,7 +34,7 @@
           <input type="name" id="name" name="name" placeholder="Full name" required>
           <input type="email" id="email" name="email" placeholder="Email" required>
           <input type="password" id="password" name="password" placeholder="Password" required>
-          <input type="password" id="password" name="password" placeholder="Password" required>
+          <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Confirm password" required>
           <button type="submit">Register</button>
        </form>
       </div>
