--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jaldi:wght@400;700&family=Jura:wght@300..700&family=Lemon&display=swap" rel="stylesheet">
  <script type="module" src="/scripts/index.mjs"></script>
+ <script type="module" src="/scripts/utilitys/api.mjs"></script>
 </head>
 <body>
   <header>
