--- a/html/login.html
+++ b/html/login.html
@@ -30,11 +30,11 @@
       <div class="login-form">
         <h1>Welcome back!</h1>
          <a href="/html/register.html"><h2>New user? Register <span>here</span></h2></a>
-          <form action="#" method="#">
+          <form id="loginForm" action="#" method="#">
             <input type="email" id="email" name="email" placeholder="Email" required>
             <input type="password" id="password" name="password" placeholder="Password" required>
-            <button type="submit">Submit</button>
-         </form>
+            <button type="submit">Login</button>
+        </form>
       </div>
     </section>
   </main>
