--- a/html/register.html
+++ b/html/register.html
@@ -30,13 +30,13 @@
       <div class="login-img"></div>
       <div class="login-form">
         <h1>Welcome!</h1>
-        <form action="#" method="#">
-          <input type="name" id="name" name="name" placeholder="Full name" required>
+        <form id="registrationForm" action="#" method="#">
+          <input type="text" id="name" name="name" placeholder="Full name" required>
           <input type="email" id="email" name="email" placeholder="Email" required>
           <input type="password" id="password" name="password" placeholder="Password" required>
           <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Confirm password" required>
           <button type="submit">Register</button>
-       </form>
+      </form>
       </div>
     </section>
   </main>
