--- a/html/register.html
+++ b/html/register.html
@@ -31,7 +31,7 @@
       <div class="login-form">
         <h1>Welcome!</h1>
         <form id="registrationForm" action="#" method="#">
-          <input type="text" id="name" name="name" placeholder="Full name" required>
+          <input type="text" id="name" name="name" placeholder="User name" required>
           <input type="email" id="email" name="email" placeholder="Email" required>
           <input type="password" id="password" name="password" placeholder="Password" required>
           <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Confirm password" required>
