--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Jaldi:wght@400;700&family=Jura:wght@300..700&family=Lemon&display=swap" rel="stylesheet">
  <script type="module" src="/scripts/index.mjs"></script>
  <script type="module" src="/scripts/utilitys/api.mjs"></script>
+ <script type="module" src="/scripts/utilitys/doFetch.mjs"></script>
 </head>
 <body>
   <header>
