--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       Carousel
     </section>
     <section class="blog-grid">
-      Blog grid
+      <div id="display-posts"></div>
     </section>
   </main>
   <footer>
