--- a/html/editpost.html
+++ b/html/editpost.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jaldi:wght@400;700&family=Jura:wght@300..700&family=Lemon&display=swap" rel="stylesheet">
+  <script type="module" src="/scripts/utilitys/newpost.mjs"></script>
 </head>
 <body>
   <header>
@@ -28,7 +29,13 @@
     <section class="new-post">
       <div class="new-post-form">
         <h1>New blog post</h1>
-        form here
+        <form id="newpost" action="#" method="#">
+          <input type="title" id="title" name="title" placeholder="Write yout title here" required>
+           <textarea name="text" id="text" cols="30" rows="10" placeholder="Write your blog post here" required></textarea>
+           <input type="media" id="media" name="media" placeholder="Media">
+
+          <button type="submit">Post</button>
+      </form>
       </div>
     </section>
   </main>
