--- a/html/editpost.html
+++ b/html/editpost.html
@@ -33,6 +33,7 @@
           <input type="title" id="title" name="title" placeholder="Write yout title here" required>
            <textarea name="text" id="text" cols="30" rows="10" placeholder="Write your blog post here" required></textarea>
            <input type="banner" id="banner" name="banner" placeholder="Banner image link">
+           <input type="banner" id="banner-alt" name="banner" placeholder="Banner image alt text">
            <input type="media" id="media" name="media" placeholder="Image link">
            <input type="media" id="media-alt" name="media" placeholder="Image alt text">
 
