--- a/html/admin.html
+++ b/html/admin.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>New user</title>
+  <title>Blog Feed</title>
   <link rel="stylesheet" href="../css/assets.css">
-  <link rel="stylesheet" href="../css/login.css">
+  <link rel="stylesheet" href="../css/blogpost.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jaldi:wght@400;700&family=Jura:wght@300..700&family=Lemon&display=swap" rel="stylesheet">
-  <script type="module" src="/scripts/utilitys/register.mjs"></script>
+  <script type="module" src="/scripts/admin.mjs"></script>
 </head>
 <body>
   <header>
@@ -26,19 +26,11 @@
     </div>
   </header>
   <main>
-    <section class="login">
-      <div class="login-img"></div>
-      <div class="login-form">
-        <h1>Welcome!</h1>
-        <a href="/html/login.html"><h2>Already a user? Sign in <span>here</span></h2></a>
-        <form id="registrationForm" action="#" method="#">
-          <input type="text" id="name" name="name" placeholder="User name" required>
-          <input type="email" id="email" name="email" placeholder="Email" required>
-          <input type="password" id="password" name="password" placeholder="Password" required>
-          <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Confirm password" required>
-          <button type="submit">Register</button>
-      </form>
-      </div>
+    <section class="new-post">
+      <button id="new-post"> <a href="/html/newpost.html"></a>New post</button>
+    </section>
+    <section class="blog-feed-admin">
+      <div id="display-feed"></div>
     </section>
   </main>
   <footer>
