--- a/html/login.html
+++ b/html/login.html
@@ -19,8 +19,8 @@
     <div class="header-nav">
     <nav>
       <ul>
-        <li> <a href="/html/blogpost.html">Blog</a></li>
         <li> <a href="/html/login.html">Sign in</a></li>
+        <li> <a href="/html/admin.html">Admin</a></li>
       </ul>
     </nav>
     </div>
