--- a/html/newpost.html
+++ b/html/newpost.html
@@ -19,8 +19,8 @@
     <div class="header-nav">
     <nav>
       <ul>
-        <li> <a href="/html/blogpost.html">Blog</a></li>
         <li> <a href="/html/login.html">Sign in</a></li>
+        <li> <a href="/html/admin.html">Admin</a></li>
       </ul>
     </nav>
     </div>
@@ -32,8 +32,6 @@
         <form id="newpost" action="#" method="#">
           <input type="title" id="title" name="title" placeholder="Write yout title here" required>
            <textarea name="text" id="text" cols="30" rows="10" placeholder="Write your blog post here" required></textarea>
-           <input type="banner" id="banner" name="banner" placeholder="Banner image link">
-           <input type="banner" id="banner-alt" name="banner" placeholder="Banner image alt text">
            <input type="media" id="media" name="media" placeholder="Image link">
            <input type="media" id="media-alt" name="media" placeholder="Image alt text">
 
