--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     </div>
     <div class="header-nav">
     <nav>
-      <ul>
-        <li> <a href="/html/blogpost.html">Blog</a></li>
+      <ul> 
         <li> <a href="/html/login.html">Sign in</a></li>
+        <li> <a href="/html/admin.html">Admin</a></li>
       </ul>
     </nav>
     </div>
