blogpost styling ok on both screen

--- a/html/blogpost.html
+++ b/html/blogpost.html
@@ -27,6 +27,7 @@
   </header>
   <main>
     <section class="blog-feed">
+      <h2>Blog post</h2>
       <div id="display-one-post"></div>
     </section>
   </main>
