--- a/html/admin.html
+++ b/html/admin.html
@@ -26,11 +26,14 @@
     </div>
   </header>
   <main>
+    <section class="hi"><h1>Hi, User! <br> What do you want to do today?</h1></section>
     <section class="new-post">
-      <button id="new-post"> <a href="/html/newpost.html"></a>New post</button>
+      <a href="./newpost.html">
+        <button>New post</button>
+      </a>
     </section>
     <section class="blog-feed-admin">
-      <div id="display-feed"></div>
+      <div id="display-posts"></div>
     </section>
   </main>
   <footer>
