carousel + grid styling ok

--- a/index.html
+++ b/index.html
@@ -34,12 +34,11 @@
       <button>See more <a href="#"></a></button>
     </section>
     <section class="carousel-id">
+      <h3>Most recent</h3>
       <div class="carousel">
         <div class="carousel-inner" id="carousel-inner">
         </div>
       </div>
-      
-    </section>
     <section class="blog-grid">
       <div id="display-posts"></div>
     </section>
