new post styling

--- a/html/newpost.html
+++ b/html/newpost.html
@@ -6,6 +6,7 @@
   <title>New blog post</title>
   <link rel="stylesheet" href="../css/assets.css">
   <link rel="stylesheet" href="../css/login.css">
+  <link rel="stylesheet" href="../css/newpost.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jaldi:wght@400;700&family=Jura:wght@300..700&family=Lemon&display=swap" rel="stylesheet">
@@ -34,8 +35,9 @@
            <textarea name="text" id="text" cols="30" rows="10" placeholder="Write your blog post here" required></textarea>
            <input type="media" id="media" name="media" placeholder="Image link">
            <input type="media" id="media-alt" name="media" placeholder="Image alt text">
-
-          <button type="submit">Post</button>
+          <div class="button-div">
+            <button type="submit">Post</button>
+        </div>
       </form>
       </div>
     </section>
