logout js + css

--- a/html/admin.html
+++ b/html/admin.html
@@ -6,6 +6,7 @@
   <title>Blog Feed</title>
   <link rel="stylesheet" href="../css/assets.css">
   <link rel="stylesheet" href="../css/admin.css">
+  <link rel="stylesheet" href="../css/newpost.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jaldi:wght@400;700&family=Jura:wght@300..700&family=Lemon&display=swap" rel="stylesheet">
@@ -26,8 +27,10 @@
     </div>
   </header>
   <main>
+    <div class="logout-button-class">
+      <button id="logout-button">Log out</button>
+    </div>
     <section class="hi"><h1>Hi, User! <br> What do you want to do today?</h1></section>
-    
     <section class="blog-feed-admin">
       <a href="./newpost.html">
         <button class="new">Create a new post</button>
