--- a/html/editpost.html
+++ b/html/editpost.html
@@ -3,13 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Blog Feed</title>
+  <title>New blog post</title>
   <link rel="stylesheet" href="../css/assets.css">
-  <link rel="stylesheet" href="../css/blogpost.css">
+  <link rel="stylesheet" href="../css/login.css">
+  <link rel="stylesheet" href="../css/newpost.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jaldi:wght@400;700&family=Jura:wght@300..700&family=Lemon&display=swap" rel="stylesheet">
-  <script type="module" src="/scripts/blogpost.mjs"></script>
+  <script type="module" src="/scripts/utilitys/editpost.mjs"></script>
 </head>
 <body>
   <header>
@@ -26,9 +27,19 @@
     </div>
   </header>
   <main>
-    <section class="blog-feed">
-      <h3>Blog post</h3>
-      <div id="display-one-post"></div>
+    <section class="new-post">
+      <div class="edit-form">
+        <h1>New blog post</h1>
+        <form id="edit-post-form" action="#" method="#">
+          <input type="title" id="title" name="title" placeholder="Write yout title here" required>
+           <textarea name="text" id="text" cols="30" rows="10" placeholder="Write your blog post here" required></textarea>
+           <input type="media" id="media" name="media" placeholder="Image link">
+           <input type="media" id="media-alt" name="media" placeholder="Image alt text">
+          <div class="button-div">
+            <button type="submit">Save changes</button>
+        </div>
+      </form>
+      </div>
     </section>
   </main>
   <footer>
