--- a/html/login.html
+++ b/html/login.html
@@ -27,9 +27,8 @@
   </header>
   <main>
     <section class="login">
-      <div class="login-img"></div>
       <div class="login-form">
-        <h1>Welcome back!</h1>
+        <h1>Login</h1>
          <a href="/html/register.html"><h3>New user? Register <span>here</span></h3></a>
           <form id="loginForm" action="#" method="#">
             <input type="email" id="email" name="email" placeholder="Email" required>
