--- a/html/register.html
+++ b/html/register.html
@@ -27,9 +27,8 @@
   </header>
   <main>
     <section class="login">
-      <div class="login-img"></div>
       <div class="login-form">
-        <h1>Welcome!</h1>
+        <h1>New user</h1>
         <a href="/html/login.html"><h3>Already a user? Sign in <span>here</span></h3></a>
         <form id="registrationForm" action="#" method="#">
           <input type="text" id="name" name="name" placeholder="User name" required>
