--- a/html/blogpost.html
+++ b/html/blogpost.html
@@ -27,7 +27,8 @@
   </header>
   <main>
     <section class="blog-feed">
-      <h3>Blog post</h3>
+      <div class="blog-feed-h3">
+      <h3>Blog post</h3></div>
       <div id="display-one-post"></div>
     </section>
   </main>
