--- a/html/register.html
+++ b/html/register.html
@@ -14,7 +14,7 @@
 <body>
   <header>
     <div class="logo">
-      <a href="/index.html">Hungry Eyes</a>
+      <a href="./index.html">Hungry Eyes</a>
     </div>
     <div class="header-nav">
     <nav>
@@ -29,7 +29,7 @@
     <section class="login">
       <div class="login-form">
         <h1>New user</h1>
-        <a href="/html/login.html"><h3>Already a user? Sign in <span>here</span></h3></a>
+        <a href="./html/login.html"><h3>Already a user? Sign in <span>here</span></h3></a>
         <form id="registrationForm" action="#" method="#">
           <input type="text" id="name" name="name" placeholder="User name" required>
           <input type="email" id="email" name="email" placeholder="Email" required>
