--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jaldi:wght@400;700&family=Jura:wght@300..700&family=Lemon&display=swap" rel="stylesheet">
- <script type="module" src="/scripts/index.mjs"></script>
- <script type="module" src="/scripts/utilitys/api.mjs"></script>
- <script type="module" src="/scripts/utilitys/doFetch.mjs"></script>
- <script type="module" src="/scripts/utilitys/carousel.mjs"></script>
+ <script type="module" src="./scripts/index.mjs"></script>
+ <script type="module" src="./scripts/utilitys/api.mjs"></script>
+ <script type="module" src="./scripts/utilitys/doFetch.mjs"></script>
+ <script type="module" src="./scripts/utilitys/carousel.mjs"></script>
 </head>
 <body>
   <header>
@@ -44,9 +44,9 @@
     </section>
   </main>
   <footer>
-      <img src="/img/facebook-app-symbol-2.png" alt="facebook symbol">
-      <img src="/img/instagram-3.png" alt="instagram symbol">
-      <img src="/img/tik-tok-2.png" alt="tiktok symbol">
+      <img src="./img/facebook-app-symbol-2.png" alt="facebook symbol">
+      <img src="./img/instagram-3.png" alt="instagram symbol">
+      <img src="./img/tik-tok-2.png" alt="tiktok symbol">
     <div class="footer-logo">
       Hungry Eyes
     </div>
