--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
     </section>
   </main>
   <footer>
-      <img src="./img/facebook-app-symbol-2.png" alt="facebook symbol">
-      <img src="./img/instagram-3.png" alt="instagram symbol">
-      <img src="./img/tik-tok-2.png" alt="tiktok symbol">
+      <img src="../img/facebook-app-symbol-2.png" alt="facebook symbol">
+      <img src="../img/instagram-3.png" alt="instagram symbol">
+      <img src="../img/tik-tok-2.png" alt="tiktok symbol">
     <div class="footer-logo">
       Hungry Eyes
     </div>
