--- a/html/blogpost.html
+++ b/html/blogpost.html
@@ -14,7 +14,7 @@
 <body>
   <header>
     <div class="logo">
-      <a href="/index.html">Hungry Eyes</a>
+      <a href="./index.html">Hungry Eyes</a>
     </div>
     <div class="header-nav">
     <nav>
