--- a/html/admin.html
+++ b/html/admin.html
@@ -10,12 +10,12 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jaldi:wght@400;700&family=Jura:wght@300..700&family=Lemon&display=swap" rel="stylesheet">
-  <script type="module" src="/scripts/admin.mjs"></script>
+  <script type="module" src="./scripts/admin.mjs"></script>
 </head>
 <body>
   <header>
     <div class="logo">
-      <a href="/index.html">Hungry Eyes</a>
+      <a href="./index.html">Hungry Eyes</a>
     </div>
     <div class="header-nav">
     <nav>
