--- a/html/login.html
+++ b/html/login.html
@@ -14,7 +14,7 @@
 <body>
   <header>
     <div class="logo">
-      <a href="/index.html">Hungry Eyes</a>
+      <a href="./index.html">Hungry Eyes</a>
     </div>
     <div class="header-nav">
     <nav>
@@ -29,7 +29,7 @@
     <section class="login">
       <div class="login-form">
         <h1>Login</h1>
-         <a href="/html/register.html"><h3>New user? Register <span>here</span></h3></a>
+         <a href="./html/register.html"><h3>New user? Register <span>here</span></h3></a>
           <form id="loginForm" action="#" method="#">
             <input type="email" id="email" name="email" placeholder="Email" required>
             <input type="password" id="password" name="password" placeholder="Password" required>
