--- a/html/newpost.html
+++ b/html/newpost.html
@@ -15,7 +15,7 @@
 <body>
   <header>
     <div class="logo">
-      <a href="/index.html">Hungry Eyes</a>
+      <a href="./index.html">Hungry Eyes</a>
     </div>
     <div class="header-nav">
     <nav>
