--- a/html/blogpost.html
+++ b/html/blogpost.html
@@ -14,13 +14,13 @@
 <body>
   <header>
     <div class="logo">
-      <a href="./index.html">Hungry Eyes</a>
+      <a href="../index.html">Hungry Eyes</a>
     </div>
     <div class="header-nav">
     <nav>
       <ul>
-        <li> <a href="./html/login.html">Sign in</a></li>
-        <li> <a href="./html/admin.html">Admin</a></li>
+        <li> <a href="../html/login.html">Sign in</a></li>
+        <li> <a href="../html/admin.html">Admin</a></li>
       </ul>
     </nav>
     </div>
