--- a/html/editpost.html
+++ b/html/editpost.html
@@ -21,8 +21,8 @@
     <div class="header-nav">
     <nav>
       <ul>
-        <li> <a href="./html/login.html">Sign in</a></li>
-        <li> <a href="./html/admin.html">Admin</a></li>
+        <li> <a href="../html/login.html">Sign in</a></li>
+        <li> <a href="../html/admin.html">Admin</a></li>
       </ul>
     </nav>
     </div>
