--- a/html/admin.html
+++ b/html/admin.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Blog Feed</title>
+  <title>Admin</title>
   <link rel="stylesheet" href="../css/assets.css">
   <link rel="stylesheet" href="../css/admin.css">
   <link rel="stylesheet" href="../css/newpost.css">
