--- a/html/editpost.html
+++ b/html/editpost.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>New blog post</title>
+  <title>Edit blog post</title>
   <link rel="stylesheet" href="../css/assets.css">
   <link rel="stylesheet" href="../css/login.css">
   <link rel="stylesheet" href="../css/newpost.css">
